--- a/28may_newtiming.config
+++ b/28may_newtiming.config
@@ -1,18 +1,18 @@
 #!/usr/bin/bash
 
-tag="june17_small"
-gentag="17_06_2021"
+tag="may28"
+gentag="28_05_2021"
 threads=30
-data_folder="/export/home/popova/workspace/covid/data/munched/usher/${tag}"
-output_folder="/export/home/popova/workspace/covid/output/transmission_lineages/usher/${tag}"
-pangolin_output_folder="/export/home/popova/workspace/covid/output/transmission_lineages/usher/${tag}/pangolin"
+data_folder="/export/home/popova/workspace/covid/data/munched/gennady/${tag}"
+output_folder="/export/home/popova/workspace/covid/output/transmission_lineages/gennady/${tag}_newtiming"
+pangolin_output_folder="/export/home/popova/workspace/covid/output/transmission_lineages/gennady/${tag}_newtiming/pangolin"
 
 conda_config="/export/home/popova/miniconda3/etc/profile.d/conda.sh"
 
-#rpn_meta="/export/home/popova/workspace/covid/data/raw/28_05_2021_meta.csv"
-#meta="/export/home/popova/workspace/covid/data/raw/metadata_2021_05_31.tsv"
+rpn_meta="/export/home/popova/workspace/covid/data/raw/28_05_2021_meta.csv"
+meta="/export/home/popova/workspace/covid/data/raw/metadata_2021_05_31.tsv"
 
-tree="${data_folder}/${gentag}_for_usher_2.nwk"
+tree="${data_folder}/${gentag}_for_iqtree_3_-6.fasta.treefile"
 rus_to_rus_duplicates="${data_folder}/${gentag}_rus_to_rus_dups.tsv" 
 rus_to_nonrus_duplicates="${data_folder}/${gentag}_rus_to_nonrus_dups.tsv"
 nonrus_to_nonrus_duplicates="${data_folder}/${gentag}_nonrus_to_nonrus_dups.tsv"
@@ -32,8 +32,8 @@ rus_fasta="${data_folder}/${gentag}_rus_masked.aln"
 rus_pangolined="${pangolin_output_folder}/rus.pangolined"
 important_lineages="/export/home/popova/workspace/covid/data/russian/lineages_of_interest.list"
 
-branchlength=subs # subs or subs_per_site
-#seqlength=29903
+
+seqlength=29903
 
 leaf_states_file=${output_folder}/leaf_states.csv
 leaf_dates_file=${output_folder}/leaf_dates.csv
