--- a/usher_july1.config
+++ b/usher_july1.config
@@ -1,7 +1,7 @@
 #!/usr/bin/bash
 
-tag="june17_small"
-gentag="17_06_2021"
+tag="july1_small"
+gentag="2021-07-01"
 threads=30
 data_folder="/export/home/popova/workspace/covid/data/munched/usher/${tag}"
 output_folder="/export/home/popova/workspace/covid/output/transmission_lineages/usher/${tag}"
@@ -12,7 +12,12 @@ conda_config="/export/home/popova/miniconda3/etc/profile.d/conda.sh"
 #rpn_meta="/export/home/popova/workspace/covid/data/raw/28_05_2021_meta.csv"
 #meta="/export/home/popova/workspace/covid/data/raw/metadata_2021_05_31.tsv"
 
-tree="${data_folder}/${gentag}_for_usher_2.nwk"
+merged_meta="/export/home/popova/workspace/covid/data/russian/merged_meta.csv"
+long_ids="${data_folder}/${gentag}_samples_for_usher_2_2.long_ids"
+
+rawtree="${data_folder}/${gentag}_for_usher_2_2.all_samples.nwk"
+tree="${data_folder}/renamed.nwk"
+rus_fasta="${data_folder}/${gentag}_for_usher_2_2.fasta"
 rus_to_rus_duplicates="${data_folder}/${gentag}_rus_to_rus_dups.tsv" 
 rus_to_nonrus_duplicates="${data_folder}/${gentag}_rus_to_nonrus_dups.tsv"
 nonrus_to_nonrus_duplicates="${data_folder}/${gentag}_nonrus_to_nonrus_dups.tsv"
@@ -28,7 +33,7 @@ nonrus_duplicates_after_defluffing="${data_folder}/${gentag}_all_nonrus_duplicat
 #rus_unique_fasta="${data_folder}/${gentag}_rus_unique.fasta"
 #unique_pangolined="${pangolin_output_folder}/rus_unique.pangolined"
 #pangolined_with_duplicates="${pangolin_output_folder}/rus_withduplicates.pangolined"
-rus_fasta="${data_folder}/${gentag}_rus_masked.aln"
+
 rus_pangolined="${pangolin_output_folder}/rus.pangolined"
 important_lineages="/export/home/popova/workspace/covid/data/russian/lineages_of_interest.list"
 
